# gc-deploy

./: .gitignore  DEPLOYMENT-CHECKLIST.md  POST-DEPLOYMENT-CHECKLIST.md  README.md
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yml  test-stack-deploy.yml
auth0/: README.md
azure/: README.md  backup-recovery.md  build.sh  cloud-config.yml  new-vm.arm.json
caprover/: INSTALL_CAPROVER_ON_NEW_VM.md  INSTALL_GC_STACK.md  LOCAL-DEVELOPMENT.md  README.md  SERVICE_UPGRADES.md  TROUBLESHOOTING.md  caprover_initial_setup.py  requirements.txt  stack.example.yaml  stack.test.yaml  stack_deploy.py
caprover/gc-stack-deploy/: pyproject.toml
caprover/gc-stack-deploy/src/gc_stack_deploy/: apps_registry.py  base.py  gen_backup.py  gui.py  stack_deploy.py
caprover/gc-stack-deploy/src/gc_stack_deploy/example_configs/: stack.example.yaml
caprover/gc-stack-deploy/src/gc_stack_deploy/template/data/: config-captain.json
caprover/gc-stack-deploy/tests/: gui_test.py  test_gen_backup.py
caprover/gen-backup/: README.md  pyproject.toml
caprover/gen-backup/src/gen_backup/: cli.py
caprover/gen-backup/src/gen_backup/template/data/: config-captain.json
caprover/gen-backup/src/gen_backup/template/meta/: backup.json
caprover/gen-backup/tests/: conftest.py  test_generate.py
caprover/one-click-apps/: README.md  build-repo.sh  comapeo-cloud.yml  windmill-only.yml
caprover/one-click-apps/v4/apps/: comapeo-cloud.yml  gc-explorer.yml  gc-landing-page.yml  gcexplorer.yml  metabase.yaml  openrefine.yml  superset-only.yml  windmill-only.yml
caprover/stack-deploy-tool/: pyproject.toml
caprover/stack-deploy-tool/src/stack_deploy/: stack_deploy.py
caprover/stack-deploy-tool/src/stack_deploy/example_configs/: stack.test.yaml
caprover/tests/: Makefile  README.md  gen-backup-test.yaml  install-caprover.sh  stack.test.yaml  stack_deploy_prereqs.sh  uninstall-caprover.sh
digitalocean/: README.md  backup-recovery.md
digitalocean-vm/: README.md
docs/: index.md
warehouse/: README.md
